# solcertify-solana

./: .dockerignore  .env.example  .gitignore  Anchor.toml  Cargo.toml  README.md  STRUCTURE.md  convert_key.js  convert_key_debug.js  docker-compose.yml  package-lock.json  package.json  start-project.ps1  start-project.sh  tsconfig.json
app/: README.md  package-lock.json  package.json  vite.config.ts.timestamp-1767866655973-d8b7c4c869c89.mjs
app/src/: App.tsx  buffer-polyfill.ts  main.tsx
app/src/components/: ProposeLaw.tsx  Results.tsx  VoteOnLaw.tsx
backend/: .gitignore  Anchor.toml  Cargo.toml  README.md  gen_discriminators.js  generate_discriminators.js  package-lock.json  package.json  tsconfig.json
backend/migrations/: deploy.ts
backend/programs/solcertify/: Cargo.toml
backend/programs/solcertify/src/: lib.rs
backend/programs/solcertify/src/errors/: mod.rs
backend/programs/solcertify/src/instructions/: mod.rs
backend/programs/solcertify/src/processor/: add_certifier.rs  approve_certification.rs  initialize.rs  issue_certificate.rs  mod.rs  reject_certification.rs  remove_certifier.rs  request_certification.rs  transfer_certificate.rs  verify_certificate.rs
backend/programs/solcertify/src/state/: authority.rs  certificate.rs  certification_request.rs  certification_type.rs  certifier_profile.rs  constants.rs  mod.rs  user_activity.rs
backend/scripts/: add-certifier.ts  generate_discriminators.ts
backend/tests/: solcertify.ts
docker/: Dockerfile.backend  Dockerfile.frontend  Dockerfile.ipfs  start-backend.sh
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  buffer-polyfill.ts  index.css  main.tsx
frontend/src/components/: AuthorityInfo.tsx  CertifierDashboard.tsx  Navbar.tsx  (+4 more)
ipfs-service/: .env.example  README.md  package-lock.json  package.json  server.js
programs/decentravote/: Cargo.toml
tests/: decentravote.ts
(+12 files in other folders)
