[workspace]
members = [
    "programs/solcertify"
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
opt-level = 3

# =============================================================================
# FIX: Dependency version overrides for Solana toolchain compatibility
# La toolchain BPF/SBF de Solana 1.18.x utilise Rust 1.75.0-dev
# 
# Les versions récentes de certaines crates ne sont pas compatibles :
# - indexmap 2.3.0+ requiert Rust 1.76+
# - toml_datetime 0.7.0+ requiert Rust 1.76+
# - borsh 1.6.0+ requiert Rust 1.77+
#
# Solution: Utiliser cargo update --precise après avoir régénéré le Cargo.lock
# pour forcer des versions plus anciennes de ces crates
# =============================================================================

[workspace.dependencies]
# Version fixe de solana-program pour correspondre à la CLI installée
solana-program = "=1.18.26"
